Update task info and test results for Battleship with Java
Update task-info.yaml to mark the multiplayer option task as solved and adjust the current task number. Additionally, test cases and related results are updated to reflect changes in the gameplay, including ship placement and player actions.

--- a/Battleship with Java/Add multiplayer option/task-info.yaml
+++ b/Battleship with Java/Add multiplayer option/task-info.yaml
@@ -7,5 +7,9 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/35309#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Sun, 29 Sep 2024 00:02:27 UTC"
 record: -1
