--- a/Battleship with Java/Implement the  fog of war  feature/task-info.yaml
+++ b/Battleship with Java/Implement the  fog of war  feature/task-info.yaml
@@ -8,5 +8,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/35307#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sat, 28 Sep 2024 06:57:12 UTC"
+record: 4
