--- a/Battleship with Java/Define rules to end the game/task-info.yaml
+++ b/Battleship with Java/Define rules to end the game/task-info.yaml
@@ -7,5 +7,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/35308#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sat, 28 Sep 2024 10:00:19 UTC"
+record: 5
