--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Fri, 27 Sep 2024 09:23:55 UTC"
+update_date: "Sat, 28 Sep 2024 23:41:51 UTC"
 stages:
   - id: 2281
     step: 35304
@@ -16,13 +16,13 @@ stages:
     is_completed: true
   - id: 2284
     step: 35307
-    is_completed: false
+    is_completed: true
   - id: 2285
     step: 35308
-    is_completed: false
+    is_completed: true
   - id: 2286
     step: 35309
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Introduction to Java
